Fix#1454 UI - Carbon splash screen should disable actions (#1558)
- Background for all Modal dialogs should be gray / dimmed. Up to now it was just for flyouts, but now the splashscreen clearly disables interaction with the background.
- I believe this covers the core bug being raised as I couldn't get to any file system actions and attribute this bug to user confusion.

--- a/src/sql/parts/common/modal/media/modal.css
+++ b/src/sql/parts/common/modal/media/modal.css
@@ -3,7 +3,7 @@
  *  Licensed under the MIT License. See License.txt in the project root for license information.
  *--------------------------------------------------------------------------------------------*/
 
-.monaco-shell .modal.flyout-dialog {
+.monaco-shell .modal {
 	background-color: rgba(204, 204, 204, 0.6);
 }
 
